[gd_scene load_steps=16 format=3 uid="uid://oq8gbyki3scm"]

[ext_resource type="Texture2D" uid="uid://bb5fnm8xr1nk6" path="res://Assets/particles/sparkle.png" id="1_h8ceh"]
[ext_resource type="Script" uid="uid://dq3wmhdbveewl" path="res://scenes/projectiles/sparkle.gd" id="1_hl07r"]
[ext_resource type="AudioStream" uid="uid://bvxg6q4gsm7kg" path="res://Assets/sounds/enemie/lightFish/streaking.ogg" id="2_unxyi"]

[sub_resource type="Curve" id="Curve_hl07r"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_unxyi"]
curve = SubResource("Curve_hl07r")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_unxyi"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_max = 500.0
angular_velocity_min = -1.6093254e-05
angular_velocity_max = -1.6093254e-05
gravity = Vector3(0, 0, 0)
scale_min = 0.19999999
scale_max = 0.19999999
scale_curve = SubResource("CurveTexture_unxyi")

[sub_resource type="Curve" id="Curve_h8ceh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_hl07r"]
curve = SubResource("Curve_h8ceh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o408x"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_max = 15000.0
gravity = Vector3(0, 98, 0)
scale_min = 0.29999998
scale_max = 0.29999998
scale_curve = SubResource("CurveTexture_hl07r")

[sub_resource type="Animation" id="Animation_unxyi"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_hl07r"]
resource_name = "bounce"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 2),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.06666667, -0.0101341605, 0.8, -0.41006127, -0.003936281, 0.39, 0.0037437081, 1.5, -0.06666666, -0.016702652, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 2),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.06666667, -0.026555479, 0.8, -0.41006365, 0.0029701677, 0.39, -0.002824843, 1.5, -0.06666666, -0.03312403, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o408x"]
_data = {
&"RESET": SubResource("Animation_unxyi"),
&"bounce": SubResource("Animation_hl07r")
}

[sub_resource type="Animation" id="Animation_o408x"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(4.484863e-06, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_h8ceh"]
resource_name = "rotation"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(4.484863e-06, 0, 0, 0, 0, 3.1415927, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hfa2v"]
_data = {
&"RESET": SubResource("Animation_o408x"),
&"rotation": SubResource("Animation_h8ceh")
}

[node name="sparkle" type="CharacterBody2D" groups=["dangerObj"]]
script = ExtResource("1_hl07r")

[node name="streak" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(0.5549474, 0.55163985)
stream = ExtResource("2_unxyi")
volume_db = 5.0
autoplay = true
max_distance = 10000.0
attenuation = 1.8025012
bus = &"SFX"

[node name="trail" type="GPUParticles2D" parent="."]
scale = Vector2(0.5549474, 0.55163985)
emitting = false
amount = 40
texture = ExtResource("1_h8ceh")
fixed_fps = 0
interpolate = false
visibility_rect = Rect2(-999999, -999999, 999999, 999999)
process_material = SubResource("ParticleProcessMaterial_unxyi")

[node name="explode" type="GPUParticles2D" parent="."]
scale = Vector2(1.0059958, 1)
emitting = false
amount = 60
texture = ExtResource("1_h8ceh")
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2(-99999, -99999, 99999, 99999)
process_material = SubResource("ParticleProcessMaterial_o408x")

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2(0.77850544, 0.77850544)

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
texture = ExtResource("1_h8ceh")

[node name="size" type="AnimationPlayer" parent="Node2D/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_o408x")
}
autoplay = "bounce"

[node name="rotation" type="AnimationPlayer" parent="Node2D/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_hfa2v")
}
autoplay = "rotation"
speed_scale = 6.7

[node name="Area2D" type="Area2D" parent="Node2D/Sprite2D" groups=["dangerObj"]]
rotation = -1.5270123
scale = Vector2(0.28041914, 0.2795523)
skew = -0.004947543

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Sprite2D/Area2D" groups=["dangerObj"]]
modulate = Color(1, 0, 0, 1)
scale = Vector2(3.353943, 3.353943)
polygon = PackedVector2Array(-63, 247, -120, 81, -496, 4, -191, -87, -68, -167, -6, -509, 63, -178, 180, -90, 485, -2, 208, 67, 74, 175, 0, 466)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(78.88294, 78.88294)

[connection signal="body_entered" from="Node2D/Sprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
